# 15-Puzzle

./: README.md  dependencies.sh  dependencies_fedora.sh  dependencies_ubuntu.sh  main.c  rendering.c  run.sh  script.sh  script_fedora.sh  script_ubuntu.sh
headers/: rendering.h
lib/cmake/: CMakeLists.txt
lib/headers/: debug.h  game.h  logic.h
src/: logic.c  main.c  rendering.c
